// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StepResult /> should render with O duration 1`] = `
<div>
  <h2
    class="sc-jtiXyc hoqCct"
  >
    Durée du préavis
  </h2>
  <strong
    class="sc-ellfGf sc-kizEQm eCpnGB gjzTZB"
  >
    Aucun préavis
  </strong>
  <p>
    Le code du travail et la convention collective ne prévoient pas de préavis.
  </p>
  <div>
    <div
      aria-expanded="false"
      class="sc-khIgEk ceBxWI"
      role="button"
    >
      <svg
        aria-hidden="true"
        class="sc-fujyAs BrylG"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="9 18 15 12 9 6"
        />
      </svg>
      <p
        class="sc-cOifOu XEwmn sc-hTRkXV jAbsFO"
      >
        Voir le détail du calcul
      </p>
    </div>
    <div
      class="sc-Arkif eVwpCw"
    >
      <h2
        class="sc-jtiXyc hoqCct"
      >
        Résultat
      </h2>
      <p>
        Il s’agit de la durée la plus longue entre la durée légale prévue par le Code du travail et la durée conventionnelle prévue par la convention collective :
      </p>
      <ul>
        <li>
          Durée légale :
           
          <strong>
            Aucun préavis.
          </strong>
        </li>
        <li>
          Durée conventionnelle :
           
          <strong>
            Aucun préavis.
          </strong>
        </li>
      </ul>
      <h2
        class="sc-jtiXyc hoqCct"
      >
        Éléments saisis
      </h2>
      <ul>
        <li>
          Ancienneté selon le code du travail
           : 
          <strong>
            Moins de 6 mois
          </strong>
        </li>
        <li>
          Licenciement pour faute grave
           : 
          <strong>
            Non
          </strong>
        </li>
        <li>
          Reconnu en tant que travailleur handicapé
           : 
          <strong>
            Non
          </strong>
        </li>
        <li>
          Catégorie professionnelle
           : 
          <strong>
            Employés
          </strong>
        </li>
        <li>
          Ancienneté selon la convention collective
           : 
          <strong>
            Moins de 1 mois
          </strong>
        </li>
        <li>
          Convention collective
           : 
          <strong>
            Convention collective nationale des transports routiers et activités auxiliaires du transport du 21 décembre 1950
          </strong>
        </li>
      </ul>
      <h2
        class="sc-jtiXyc hoqCct"
      >
        Sources
      </h2>
      <ul>
        <li>
          <a
            aria-label="Article L.1234-1 du code du travail (nouvelle fenêtre)"
            href="https://www.legifrance.gouv.fr/affichCodeArticle.do?idArticle=LEGIARTI000006901112&cidTexte=LEGITEXT000006072050&dateTexte=20080501"
            rel="noopener noreferrer"
            target="_blank"
            title="Consultez l’article l.1234-1 du code du travail"
          >
            Article L.1234-1 du code du travail
          </a>
        </li>
        <li>
          <a
            aria-label="Annexe II, article 13 (nouvelle fenêtre)"
            href="https://www.legifrance.gouv.fr/affichIDCCArticle.do;jsessionid=9D32D1AB24BC5ACF016410CDFEE667F3.tplgfr24s_3?idArticle=KALIARTI000005849509&cidTexte=KALITEXT000005678903&dateTexte=29990101&categorieLien=id"
            rel="noopener noreferrer"
            target="_blank"
            title="Consultez l’annexe ii, article 13"
          >
            Annexe II, article 13
          </a>
        </li>
      </ul>
    </div>
  </div>
  <div
    class="sc-lmgQwP sc-iIgjPs kHzGur cTJvqp"
  >
    <div
      class="sc-gGLxEB kEYfsY"
    >
      <div
        class="sc-ckTSus eGIUDO"
      >
        <svg
          aria-hidden="true"
          fill="none"
          viewBox="0 0 52 52"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M44.586 36.215h.921l-.502-.773-8.424-12.96a.5.5 0 1 1 .838-.545l9.429 14.505a.5.5 0 0 1-.42.773H5.571a.5.5 0 0 1-.419-.773L25.581 5.014a.5.5 0 0 1 .838 0l5.107 7.857a.5.5 0 0 1-.838.545l-4.269-6.567-.42-.645-.418.645L6.995 35.442l-.502.773h38.093zM34.5 18a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0z"
            fill="#3E486E"
            stroke="#4E6896"
          />
          <path
            d="M26 14.714a1.57 1.57 0 0 0-1.571 1.571v9.429a1.571 1.571 0 0 0 3.143 0v-9.429c0-.868-.704-1.571-1.572-1.571zm0 14.143A1.571 1.571 0 1 0 26 32a1.571 1.571 0 0 0 0-3.143z"
            fill="#FF7067"
          />
        </svg>
      </div>
      <div
        class="sc-fbIWvP itJXQd"
      >
        <p
          class="sc-cOifOu gIgAxs sc-gstuGz bbcEtz"
        >
          Attention il peut exister une durée plus favorable
        </p>
      </div>
    </div>
    <p>
      L’existence ou la durée du préavis de licenciement peut être prévue, par la loi pour certains cas particuliers, par un accord d’entreprise ou à défaut par un usage dans l’entreprise.
    </p>
  </div>
</div>
`;

exports[`<StepResult /> should render with both CC duration and CDT duration 1`] = `
<div>
  <h2
    class="sc-jtiXyc hoqCct"
  >
    Durée du préavis
  </h2>
  <p>
    À partir des éléments que vous avez saisis, la durée du préavis de licenciement est estimée à :
     
    <strong
      class="sc-ellfGf sc-kizEQm eCpnGB gjzTZB"
    >
      1 mois
    </strong>
    <sup
      class="sc-amkrK bJcitm"
    >
      *
    </sup>
    .
  </p>
  <p
    class="sc-cKRKFl dPTUbg"
  >
    <sup
      class="sc-amkrK bJcitm"
    >
      * 
    </sup>
    Le préavis débute à la date de première présentation de la notification du licenciement par lettre recommandée, peu importe le jour de son retrait par le salarié.
    <i
      class="sc-cKRKFl dPTUbg"
    >
       
      Exemple : si le salarié reçoit le courrier recommandé le
       
      5 avril
       alors il effectuera son dernier jour dans l’entreprise le 
      5 mai
      . Si le 
      5 mai
       tombe un samedi, un dimanche, un jour férié ou un jour qui n’est habituellement pas travaillé dans l’entreprise, le salarié effectuera son dernier jour dans l’entreprise le jour ouvrable suivant.
    </i>
     
  </p>
  <div>
    <div
      aria-expanded="false"
      class="sc-khIgEk ceBxWI"
      role="button"
    >
      <svg
        aria-hidden="true"
        class="sc-fujyAs BrylG"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="9 18 15 12 9 6"
        />
      </svg>
      <p
        class="sc-cOifOu XEwmn sc-hTRkXV jAbsFO"
      >
        Voir le détail du calcul
      </p>
    </div>
    <div
      class="sc-Arkif eVwpCw"
    >
      <h2
        class="sc-jtiXyc hoqCct"
      >
        Résultat
      </h2>
      <p>
        Il s’agit de la durée la plus longue entre la durée légale prévue par le Code du travail et la durée conventionnelle prévue par la convention collective :
      </p>
      <ul>
        <li>
          Durée légale :
           
          <strong>
            1 mois
          </strong>
        </li>
        <li>
          Durée conventionnelle :
           
          <strong>
            La convention collective n'a pas été traitée par nos services.
          </strong>
        </li>
      </ul>
      <h2
        class="sc-jtiXyc hoqCct"
      >
        Éléments saisis
      </h2>
      <ul>
        <li>
          Ancienneté selon le code du travail
           : 
          <strong>
            6 mois à moins de 2 ans
          </strong>
        </li>
        <li>
          Licenciement pour faute grave
           : 
          <strong>
            Non
          </strong>
        </li>
        <li>
          Reconnu en tant que travailleur handicapé
           : 
          <strong>
            Non
          </strong>
        </li>
        <li>
          Convention collective
           : 
          <strong>
            Convention collective nationale des transports routiers et activités auxiliaires du transport du 21 décembre 1950
          </strong>
        </li>
      </ul>
    </div>
  </div>
  <div
    class="sc-lmgQwP sc-iIgjPs kHzGur cTJvqp"
  >
    <div
      class="sc-gGLxEB kEYfsY"
    >
      <div
        class="sc-ckTSus eGIUDO"
      >
        <svg
          aria-hidden="true"
          fill="none"
          viewBox="0 0 52 52"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M44.586 36.215h.921l-.502-.773-8.424-12.96a.5.5 0 1 1 .838-.545l9.429 14.505a.5.5 0 0 1-.42.773H5.571a.5.5 0 0 1-.419-.773L25.581 5.014a.5.5 0 0 1 .838 0l5.107 7.857a.5.5 0 0 1-.838.545l-4.269-6.567-.42-.645-.418.645L6.995 35.442l-.502.773h38.093zM34.5 18a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0z"
            fill="#3E486E"
            stroke="#4E6896"
          />
          <path
            d="M26 14.714a1.57 1.57 0 0 0-1.571 1.571v9.429a1.571 1.571 0 0 0 3.143 0v-9.429c0-.868-.704-1.571-1.572-1.571zm0 14.143A1.571 1.571 0 1 0 26 32a1.571 1.571 0 0 0 0-3.143z"
            fill="#FF7067"
          />
        </svg>
      </div>
      <div
        class="sc-fbIWvP itJXQd"
      >
        <p
          class="sc-cOifOu gIgAxs sc-gstuGz bbcEtz"
        >
          Attention il peut exister une durée plus favorable
        </p>
      </div>
    </div>
    <p>
      Une durée de préavis de licenciement ou une condition d’ancienneté plus favorable au salarié peut être prévue par une convention collective, un accord de branche, un accord d’entreprise ou le contrat de travail ou les usages.
    </p>
    <p>
      Vous pouvez faire une recherche par mots-clés dans
       
      <a
        href="/convention-collective/16-transports-routiers-et-activites-auxiliaires-du-transport"
      >
        votre convention collective
      </a>
    </p>
  </div>
</div>
`;

exports[`<StepResult /> should render with only CC duration 1`] = `
<div>
  <h2
    class="sc-jtiXyc hoqCct"
  >
    Durée du préavis
  </h2>
  <strong
    class="sc-ellfGf sc-kizEQm eCpnGB gjzTZB"
  >
    Aucun préavis
  </strong>
  <p>
    Le code du travail ne prévoit pas de durée de préavis de licenciement sauf, cas particuliers.
  </p>
  <div>
    <div
      aria-expanded="false"
      class="sc-khIgEk ceBxWI"
      role="button"
    >
      <svg
        aria-hidden="true"
        class="sc-fujyAs BrylG"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="9 18 15 12 9 6"
        />
      </svg>
      <p
        class="sc-cOifOu XEwmn sc-hTRkXV jAbsFO"
      >
        Voir le détail du calcul
      </p>
    </div>
    <div
      class="sc-Arkif eVwpCw"
    >
      <h2
        class="sc-jtiXyc hoqCct"
      >
        Résultat
      </h2>
      <p>
        Il s’agit de la durée la plus longue entre la durée légale prévue par le Code du travail et la durée conventionnelle prévue par la convention collective :
      </p>
      <ul>
        <li>
          Durée légale :
           
          <strong>
            Aucun préavis.
          </strong>
        </li>
        <li>
          Durée conventionnelle :
           
          <strong>
            La convention collective n'a pas été traitée par nos services.
          </strong>
        </li>
      </ul>
      <h2
        class="sc-jtiXyc hoqCct"
      >
        Éléments saisis
      </h2>
      <ul>
        <li>
          Ancienneté selon le code du travail
           : 
          <strong>
            Moins de 6 mois
          </strong>
        </li>
        <li>
          Licenciement pour faute grave
           : 
          <strong>
            Non
          </strong>
        </li>
        <li>
          Reconnu en tant que travailleur handicapé
           : 
          <strong>
            Non
          </strong>
        </li>
        <li>
          Convention collective
           : 
          <strong>
            Convention collective nationale des transports routiers et activités auxiliaires du transport du 21 décembre 1950
          </strong>
        </li>
      </ul>
    </div>
  </div>
  <div
    class="sc-lmgQwP sc-iIgjPs kHzGur cTJvqp"
  >
    <div
      class="sc-gGLxEB kEYfsY"
    >
      <div
        class="sc-ckTSus eGIUDO"
      >
        <svg
          aria-hidden="true"
          fill="none"
          viewBox="0 0 52 52"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M44.586 36.215h.921l-.502-.773-8.424-12.96a.5.5 0 1 1 .838-.545l9.429 14.505a.5.5 0 0 1-.42.773H5.571a.5.5 0 0 1-.419-.773L25.581 5.014a.5.5 0 0 1 .838 0l5.107 7.857a.5.5 0 0 1-.838.545l-4.269-6.567-.42-.645-.418.645L6.995 35.442l-.502.773h38.093zM34.5 18a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0z"
            fill="#3E486E"
            stroke="#4E6896"
          />
          <path
            d="M26 14.714a1.57 1.57 0 0 0-1.571 1.571v9.429a1.571 1.571 0 0 0 3.143 0v-9.429c0-.868-.704-1.571-1.572-1.571zm0 14.143A1.571 1.571 0 1 0 26 32a1.571 1.571 0 0 0 0-3.143z"
            fill="#FF7067"
          />
        </svg>
      </div>
      <div
        class="sc-fbIWvP itJXQd"
      >
        <p
          class="sc-cOifOu gIgAxs sc-gstuGz bbcEtz"
        >
          Attention il peut exister une durée plus favorable
        </p>
      </div>
    </div>
    <p>
      L’existence et la durée du préavis de licenciement peuvent être prévues dans la convention collective, un accord d’entreprise ou à défaut par un usage dans l’entreprise.
    </p>
    <p>
      Vous pouvez faire une recherche par mots-clés dans
       
      <a
        href="/convention-collective/16-transports-routiers-et-activites-auxiliaires-du-transport"
      >
        votre convention collective
      </a>
    </p>
  </div>
</div>
`;

exports[`<StepResult /> should render with when no CC 1`] = `
<div>
  <h2
    class="sc-jtiXyc hoqCct"
  >
    Durée du préavis
  </h2>
  <p>
    À partir des éléments que vous avez saisis, la durée du préavis de licenciement est estimée à :
     
    <strong
      class="sc-ellfGf sc-kizEQm eCpnGB gjzTZB"
    >
      2 mois
    </strong>
    <sup
      class="sc-amkrK bJcitm"
    >
      *
    </sup>
    .
  </p>
  <p
    class="sc-cKRKFl dPTUbg"
  >
    <sup
      class="sc-amkrK bJcitm"
    >
      * 
    </sup>
    Le préavis débute à la date de première présentation de la notification du licenciement par lettre recommandée, peu importe le jour de son retrait par le salarié.
    <i
      class="sc-cKRKFl dPTUbg"
    >
       
      Exemple : si le salarié reçoit le courrier recommandé le
       
      5 avril
       alors il effectuera son dernier jour dans l’entreprise le 
      5 juin
      . Si le 
      5 juin
       tombe un samedi, un dimanche, un jour férié ou un jour qui n’est habituellement pas travaillé dans l’entreprise, le salarié effectuera son dernier jour dans l’entreprise le jour ouvrable suivant.
    </i>
     
  </p>
  <div>
    <div
      aria-expanded="false"
      class="sc-khIgEk ceBxWI"
      role="button"
    >
      <svg
        aria-hidden="true"
        class="sc-fujyAs BrylG"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="9 18 15 12 9 6"
        />
      </svg>
      <p
        class="sc-cOifOu XEwmn sc-hTRkXV jAbsFO"
      >
        Voir le détail du calcul
      </p>
    </div>
    <div
      class="sc-Arkif eVwpCw"
    >
      <h2
        class="sc-jtiXyc hoqCct"
      >
        Résultat
      </h2>
      <ul>
        <li>
          Durée légale :
           
          <strong>
            2 mois
          </strong>
        </li>
        <li>
          Durée conventionnelle :
           
          <strong>
            La convention collective n'a pas été renseignée.
          </strong>
        </li>
      </ul>
      <h2
        class="sc-jtiXyc hoqCct"
      >
        Éléments saisis
      </h2>
      <ul>
        <li>
          Ancienneté selon le code du travail
           : 
          <strong>
            Plus de 2 ans
          </strong>
        </li>
        <li>
          Licenciement pour faute grave
           : 
          <strong>
            Non
          </strong>
        </li>
        <li>
          Reconnu en tant que travailleur handicapé
           : 
          <strong>
            Non
          </strong>
        </li>
      </ul>
    </div>
  </div>
  <div
    class="sc-lmgQwP sc-iIgjPs kHzGur cTJvqp"
  >
    <div
      class="sc-gGLxEB kEYfsY"
    >
      <div
        class="sc-ckTSus eGIUDO"
      >
        <svg
          aria-hidden="true"
          fill="none"
          viewBox="0 0 52 52"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M44.586 36.215h.921l-.502-.773-8.424-12.96a.5.5 0 1 1 .838-.545l9.429 14.505a.5.5 0 0 1-.42.773H5.571a.5.5 0 0 1-.419-.773L25.581 5.014a.5.5 0 0 1 .838 0l5.107 7.857a.5.5 0 0 1-.838.545l-4.269-6.567-.42-.645-.418.645L6.995 35.442l-.502.773h38.093zM34.5 18a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0z"
            fill="#3E486E"
            stroke="#4E6896"
          />
          <path
            d="M26 14.714a1.57 1.57 0 0 0-1.571 1.571v9.429a1.571 1.571 0 0 0 3.143 0v-9.429c0-.868-.704-1.571-1.572-1.571zm0 14.143A1.571 1.571 0 1 0 26 32a1.571 1.571 0 0 0 0-3.143z"
            fill="#FF7067"
          />
        </svg>
      </div>
      <div
        class="sc-fbIWvP itJXQd"
      >
        <p
          class="sc-cOifOu gIgAxs sc-gstuGz bbcEtz"
        >
          Attention il peut exister une durée plus favorable
        </p>
      </div>
    </div>
    <p>
      Une durée de préavis de licenciement ou une condition d’ancienneté plus favorable au salarié peut être prévue par une convention collective, un accord de branche, un accord d’entreprise ou le contrat de travail ou les usages.
    </p>
  </div>
</div>
`;

exports[`<StepResult /> should render with when unhandled CC 1`] = `
<div>
  <h2
    class="sc-jtiXyc hoqCct"
  >
    Durée du préavis
  </h2>
  <p>
    À partir des éléments que vous avez saisis, la durée du préavis de licenciement est estimée à :
     
    <strong
      class="sc-ellfGf sc-kizEQm eCpnGB gjzTZB"
    >
      2 mois
    </strong>
    <sup
      class="sc-amkrK bJcitm"
    >
      *
    </sup>
    .
  </p>
  <p
    class="sc-cKRKFl dPTUbg"
  >
    <sup
      class="sc-amkrK bJcitm"
    >
      * 
    </sup>
    Le préavis débute à la date de première présentation de la notification du licenciement par lettre recommandée, peu importe le jour de son retrait par le salarié.
    <i
      class="sc-cKRKFl dPTUbg"
    >
       
      Exemple : si le salarié reçoit le courrier recommandé le
       
      5 avril
       alors il effectuera son dernier jour dans l’entreprise le 
      5 juin
      . Si le 
      5 juin
       tombe un samedi, un dimanche, un jour férié ou un jour qui n’est habituellement pas travaillé dans l’entreprise, le salarié effectuera son dernier jour dans l’entreprise le jour ouvrable suivant.
    </i>
     
  </p>
  <div>
    <div
      aria-expanded="false"
      class="sc-khIgEk ceBxWI"
      role="button"
    >
      <svg
        aria-hidden="true"
        class="sc-fujyAs BrylG"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="9 18 15 12 9 6"
        />
      </svg>
      <p
        class="sc-cOifOu XEwmn sc-hTRkXV jAbsFO"
      >
        Voir le détail du calcul
      </p>
    </div>
    <div
      class="sc-Arkif eVwpCw"
    >
      <h2
        class="sc-jtiXyc hoqCct"
      >
        Résultat
      </h2>
      <p>
        Il s’agit de la durée la plus longue entre la durée légale prévue par le Code du travail et la durée conventionnelle prévue par la convention collective :
      </p>
      <ul>
        <li>
          Durée légale :
           
          <strong>
            2 mois
          </strong>
        </li>
        <li>
          Durée conventionnelle :
           
          <strong>
            La convention collective n'a pas été traitée par nos services.
          </strong>
        </li>
      </ul>
      <h2
        class="sc-jtiXyc hoqCct"
      >
        Éléments saisis
      </h2>
      <ul>
        <li>
          Ancienneté selon le code du travail
           : 
          <strong>
            Plus de 2 ans
          </strong>
        </li>
        <li>
          Licenciement pour faute grave
           : 
          <strong>
            Non
          </strong>
        </li>
        <li>
          Reconnu en tant que travailleur handicapé
           : 
          <strong>
            Non
          </strong>
        </li>
        <li>
          Convention collective
           : 
          <strong>
            Convention collective nationale de la cordonnerie multiservice du 7 août 1989. Elargie au secteur des cordonniers industriels
          </strong>
        </li>
      </ul>
    </div>
  </div>
  <div
    class="sc-lmgQwP sc-iIgjPs kHzGur cTJvqp"
  >
    <div
      class="sc-gGLxEB kEYfsY"
    >
      <div
        class="sc-ckTSus eGIUDO"
      >
        <svg
          aria-hidden="true"
          fill="none"
          viewBox="0 0 52 52"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M44.586 36.215h.921l-.502-.773-8.424-12.96a.5.5 0 1 1 .838-.545l9.429 14.505a.5.5 0 0 1-.42.773H5.571a.5.5 0 0 1-.419-.773L25.581 5.014a.5.5 0 0 1 .838 0l5.107 7.857a.5.5 0 0 1-.838.545l-4.269-6.567-.42-.645-.418.645L6.995 35.442l-.502.773h38.093zM34.5 18a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0z"
            fill="#3E486E"
            stroke="#4E6896"
          />
          <path
            d="M26 14.714a1.57 1.57 0 0 0-1.571 1.571v9.429a1.571 1.571 0 0 0 3.143 0v-9.429c0-.868-.704-1.571-1.572-1.571zm0 14.143A1.571 1.571 0 1 0 26 32a1.571 1.571 0 0 0 0-3.143z"
            fill="#FF7067"
          />
        </svg>
      </div>
      <div
        class="sc-fbIWvP itJXQd"
      >
        <p
          class="sc-cOifOu gIgAxs sc-gstuGz bbcEtz"
        >
          Attention il peut exister une durée plus favorable
        </p>
      </div>
    </div>
    <p>
      Une durée de préavis de licenciement ou une condition d’ancienneté plus favorable au salarié peut être prévue par une convention collective, un accord de branche, un accord d’entreprise ou le contrat de travail ou les usages.
    </p>
    <p>
      Vous pouvez faire une recherche par mots-clés dans
       
      <a
        href="/convention-collective/1561-cordonnerie-multiservice"
      >
        votre convention collective
      </a>
    </p>
  </div>
</div>
`;
